commit translated contents

--- a/articles/api-management/TOC.yml
+++ b/articles/api-management/TOC.yml
@@ -41,8 +41,6 @@
       href: ./policies/index.md
     - name: Azure PowerShell
       href: powershell-samples.md
-    - name: Azure Policy 内置策略定义
-      href: ./policy-samples.md
 - name: 概念
   items:
     - name: 术语
@@ -179,7 +177,7 @@
           href: api-management-developer-portal-templates-reference.md
         - name: API
           href: api-management-api-templates.md
-        - name: Products
+        - name: 产品
           href: api-management-product-templates.md
         - name: 应用程序
           href: api-management-application-templates.md
@@ -263,6 +261,9 @@
       href: /rest/api/apimanagement/ApiManagementREST/api-management-REST
     - name: 资源管理器模板
       href: /azure/templates/microsoft.apimanagement/allversions
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./policy-reference.md
 - name: 资源
   items:
     - name: 常见问题解答
