--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -111,9 +111,6 @@
           href: storage-samples-blobs-powershell.md
         - name: Azure CLI
           href: storage-samples-blobs-cli.md
-        - name: Azure Policy 内置策略定义
-          displayName: 'samples, policies, definitions'
-          href: ../common/policy-samples.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: 概念
       items:
         - name: 存储帐户
@@ -554,6 +551,9 @@
           href: /azure/templates/microsoft.storage/allversions
         - name: 监视数据
           href: ../common/monitor-storage-reference.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+        - name: Azure Policy 内置策略定义
+          displayName: 'samples, policies, definitions'
+          href: ../common/policy-reference.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: 资源
       items:
         - name: Azure 更新
@@ -713,12 +713,8 @@
                   href: ../common/storage-monitoring-diagnosing-troubleshooting.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: 如何
       items:
-        - name: 创建
-          items:
-            - name: 创建存储帐户（常规用途 v2）
-              href: ../common/storage-account-create.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: 创建存储帐户（块 Blob）
-              href: storage-blob-create-account-block-blob.md
+        - name: 创建存储帐户
+          href: create-data-lake-storage-account.md
         - name: 迁移
           items:
             - name: 从 Data Lake Storage Gen1 迁移
@@ -830,6 +826,9 @@
         - name: 资源管理器模板
           displayName: ARM
           href: /azure/templates/microsoft.storage/allversions
+        - name: Azure Policy 内置策略定义
+          displayName: 'samples, policies, definitions'
+          href: ../common/policy-reference.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: 资源
       items:
         - name: 已知问题
