--- a/articles/cognitive-services/Face/index.yml
+++ b/articles/cognitive-services/Face/index.yml
@@ -1,22 +1,22 @@
 ### YamlMime:Landing
 title: 人脸文档
-summary: 使用基于云的人脸服务，开发人员可以访问高级人脸算法。 Microsoft 人脸算法支持人脸属性检测和人脸识别。 使用快速入门、教程和示例，了解如何以不同的方式分析内容。
+summary: 2020 年 6 月 11 日，Microsoft 宣布在以人权为基础的强有力的法规颁布之前，将不向美国的警察局出售人脸识别技术。 同样地，如果客户是美国警察局、由美国警察局准许使用或针对美国警察局使用 Azure 服务，则这些客户不得使用这类服务中包含的人脸识别功能（例如人脸或视频索引器）。
 metadata:
   title: 人脸文档 - 快速入门、教程和 API 参考 - Azure 认知服务 | Microsoft Docs
-  description: 使用基于云的人脸服务，开发人员可以访问高级人脸算法。 Microsoft 人脸算法支持人脸属性检测和人脸识别。 使用快速入门、教程和示例，了解如何以不同的方式分析内容。
+  description: 使用基于云的人脸服务，开发人员可以访问高级人脸算法。 Microsoft 人脸算法支持人脸属性检测和人脸识别。 通过快速入门、教程和示例了解如何以不同的方式分析内容。#必需；搜索结果中显示的文章说明。 < 160 个字符。
   services: cognitive-services
   ms.service: cognitive-services
   ms.subservice: face-api
   ms.topic: landing-page
   author: PatrickFarley
   ms.author: pafarley
-  ms.date: 10/24/2019
-  ms.openlocfilehash: e4d53baf1a083e9dafa6bd43186b507c5e724db3
-  ms.sourcegitcommit: 309cf6876d906425a0d6f72deceb9ecd231d387c
+  ms.date: 9/01/2020
+  ms.openlocfilehash: 67af472ea968501902255d3dbec18d3b6201f9e2
+  ms.sourcegitcommit: c94a177b11a850ab30f406edb233de6923ca742a
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 06/01/2020
-  ms.locfileid: "84268024"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "89278218"
 landingContent:
 - title: 关于人脸服务
   linkLists:
