--- a/articles/mariadb/TOC.yml
+++ b/articles/mariadb/TOC.yml
@@ -72,6 +72,9 @@
           href: concepts-data-access-security-private-link.md
         - name: 高级威胁防护
           href: concepts-data-access-and-security-threat-protection.md
+        - name: Azure Policy 的安全控件
+          displayName: 'regulatory, compliance, standards, domains'
+          href: ./security-controls-policy.md
         - name: 安全基线
           href: security-baseline.md
     - name: 业务连续性
