--- a/articles/active-directory/external-identities/toc.yml
+++ b/articles/active-directory/external-identities/toc.yml
@@ -30,10 +30,10 @@
     - name: 概念
       expanded: false
       items:
+        - name: 外部标识定价
+          href: external-identities-pricing.md
         - name: B2B 最佳做法
           href: b2b-fundamentals.md
-        - name: B2B 许可
-          href: licensing-guidance.md
         - name: B2B 和 Office 365 外部共享
           href: o365-external-user.md
         - name: 邀请兑换
