--- a/articles/cognitive-services/Computer-vision/index.yml
+++ b/articles/cognitive-services/Computer-vision/index.yml
@@ -11,19 +11,19 @@ metadata:
   author: PatrickFarley
   ms.author: pafarley
   ms.date: 10/01/2019
-  ms.openlocfilehash: 58cb24b55be516fed5b72178ab83f38cc3d1caac
-  ms.sourcegitcommit: 5a37753456bc2e152c3cb765b90dc7815c27a0a8
+  ms.openlocfilehash: 6b72b632cb1cea104d7db2afbb870725496326b8
+  ms.sourcegitcommit: 5ed504a9ddfbd69d4f2d256ec431e634eb38813e
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/04/2020
-  ms.locfileid: "87760645"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89321797"
 landingContent:
 - title: 关于计算机视觉
   linkLists:
   - linkListType: overview
     links:
     - text: 什么是计算机视觉？
-      url: Home.md
+      url: overview.md
   - linkListType: whats-new
     links:
     - text: 新增功能
