--- a/articles/cognitive-services/Computer-vision/toc.yml
+++ b/articles/cognitive-services/Computer-vision/toc.yml
@@ -4,7 +4,7 @@
   expanded: true
   items:
     - name: 什么是计算机视觉？
-      href: Home.md
+      href: overview.md
     - name: 新增功能
       href: whats-new.md
 - name: 快速入门
