--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -56,6 +56,8 @@
               href: how-to-set-up-instance-portal.md
         - name: 编写应用身份验证码
           href: how-to-authenticate-client.md
+        - name: 将实例移动到其他区域
+          href: how-to-move-regions.md
     - name: 设计模型
       items:
         - name: 管理自定义模型
