--- a/articles/governance/blueprints/toc.yml
+++ b/articles/governance/blueprints/toc.yml
@@ -22,7 +22,7 @@
       href: create-blueprint-rest-api.md
     - name: 创建蓝图 - ARM 模板
       displayName: 'assign, compliance, resource manager'
-      href: ../../azure-resource-manager/templates/deploy-to-subscription.md??toc=/azure/governance/blueprints/toc.json&bc=/azure/governance/blueprints/breadcrumb/toc.json
+      href: ../../azure-resource-manager/templates/deploy-to-subscription.md?toc=/azure/governance/blueprints/toc.json&bc=/azure/governance/blueprints/breadcrumb/toc.json#azure-blueprints
 - name: 教程
   items:
     - name: 从蓝图示例创建
