--- a/articles/healthcare-apis/TOC.yml
+++ b/articles/healthcare-apis/TOC.yml
@@ -46,11 +46,6 @@
       items:
         - name: 通过 Azure IoT 中心接收设备数据
           href: device-data-through-iot-hub.md
-- name: 示例
-  items:
-    - name: Azure Policy 内置策略定义
-      displayName: 'samples, policies, definitions'
-      href: ./policy-samples.md
 - name: 操作指南
   expanded: false
   items:
@@ -82,6 +77,11 @@
           href: configure-cross-origin-resource-sharing.md
         - name: 配置导出
           href: configure-export-data.md
+    - name: 导出数据
+      expanded: false
+      items:
+        - name: 去标识化导出
+          href: export-data.md
     - name: 查找标识对象 ID
       href: find-identity-object-ids.md
     - name: 在 Azure API for FHIR® 中启用诊断日志记录
@@ -118,3 +118,6 @@
   items:
     - name: Azure CLI
       href: /cli/azure/ext/healthcareapis/healthcareapis
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./policy-reference.md
