--- a/articles/key-vault/general/toc.yml
+++ b/articles/key-vault/general/toc.yml
@@ -39,9 +39,6 @@
   items:
     - name: Key Vault 代码示例
       href: 'https://docs.microsoft.com/samples/browse/?expanded=azure&products=azure-key-vault'
-    - name: Azure Policy 内置策略定义
-      displayName: 'samples, policies, definitions'
-      href: ../policy-samples.md?toc=/azure/key-vault/general/toc.json&bc=/azure/key-vault/breadcrumb/toc.json
 - name: 概念
   items:
     - name: 基本概念
@@ -90,6 +87,8 @@
           href: managed-identity.md
         - name: 使用访问控制策略
           href: group-permissions-for-apps.md
+        - name: 使用 Azure 基于角色的访问控制（预览）
+          href: rbac-guide.md
         - name: 排查访问问题
           href: troubleshooting-access-issues.md
     - name: 开发
@@ -163,6 +162,9 @@
     - name: 资源管理器模板
       href: /azure/templates/microsoft.keyvault/allversions
       displayName: ARM
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ../policy-reference.md?toc=/azure/key-vault/general/toc.json&bc=/azure/key-vault/breadcrumb/toc.json
 - name: 资源
   items:
     - name: 利用 Microsoft Learn 掌握技能
