--- a/articles/sentinel/TOC.yml
+++ b/articles/sentinel/TOC.yml
@@ -171,6 +171,10 @@
           href: livestream.md
     - name: 删除 Azure Sentinel
       href: offboard.md
+- name: 参考（新增！）
+  items:
+    - name: REST API
+      href: 'https://docs.microsoft.com/rest/api/securityinsights/'
 - name: 资源
   items:
     - name: 有用的资源
