--- a/articles/storage/tables/TOC.yml
+++ b/articles/storage/tables/TOC.yml
@@ -47,13 +47,16 @@
       href: ../common/storage-account-overview.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
     - name: 安全性
       items:
-        - name: 安全基线
-          href: ../common/security-baseline.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
         - name: Azure 存储静态加密
           href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
           items:
             - name: 客户管理的密钥和 Azure Key Vault
               href: ../common/encryption-customer-managed-keys.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
+        - name: Azure Policy 的安全控件
+          displayName: 'regulatory, compliance, standards, domains'
+          href: ../common/security-controls-policy.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
+        - name: 安全基线
+          href: ../common/security-baseline.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
     - name: 数据冗余
       href: ../common/storage-redundancy.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
     - name: 灾难恢复和故障转移
