commit translated contents

--- a/articles/application-gateway/index.yml
+++ b/articles/application-gateway/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: vhorne
   ms.author: victorh
   ms.date: 03/24/2020
-  ms.openlocfilehash: 63000da3b1d3e69c2a0c0a1d10267e18da199ffa
-  ms.sourcegitcommit: 3543d3b4f6c6f496d22ea5f97d8cd2700ac9a481
+  ms.openlocfilehash: 0ff595778193a4ff11ebd67e1cec4bccfa3afc61
+  ms.sourcegitcommit: 3246e278d094f0ae435c2393ebf278914ec7b97b
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/20/2020
-  ms.locfileid: "86524754"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89378502"
 landingContent:
 - title: 了解应用程序网关
   linkLists:
@@ -27,6 +27,8 @@ landingContent:
     links:
     - text: 常见问题
       url: application-gateway-faq.md
+    - text: 新增功能
+      url: https://azure.microsoft.com/updates/?category=networking&query=Application%20Gateway
 - title: 支持高流量
   linkLists:
   - linkListType: concept
