--- a/articles/cognitive-services/TOC.yml
+++ b/articles/cognitive-services/TOC.yml
@@ -4,7 +4,7 @@
   expanded: true
   items:
     - name: 什么是认知服务？
-      href: Welcome.md
+      href: what-are-cognitive-services.md
     - name: 认知服务文档中的新增内容
       href: whats-new-docs.md
     - name: 认知服务和机器学习
