--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -114,6 +114,9 @@
           href: concepts-azure-ad-authentication.md
         - name: 基础结构双重加密
           href: concepts-infrastructure-double-encryption.md
+        - name: Azure Policy 的安全控件
+          displayName: 'regulatory, compliance, standards, domains'
+          href: ./security-controls-policy.md
         - name: 安全基线
           href: security-baseline.md
     - name: 业务连续性
